--- a/style.css
+++ b/style.css
@@ -8,5 +8,8 @@ h1 {
 
 .clicked {
   color: tomato;
-  transition: color 0.5s ease-in-out;
+}
+
+.sexy-font {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
